# criteo-api-sdk-generator

./: .gitignore  .project  README.md  build.gradle  gradle.properties  meson.build  meson.options  settings.gradle
.github/workflows/: auto_update_experimental.yml  auto_update_preview.yml  generate_all_sources.yml  generate_and_push_postman.yml  generate_changelog.yml  generate_java_sources.yml  generate_php_sources.yml  generate_python_sources copy.yml  generate_python_sources.yml  generate_sources.yml  hello_world.yml  test_java.yml  test_php.yml  test_python.yml  test_scripts.yml  update_marketingsolutions_preview_doc.yml  update_oas.yml  update_preview_doc_repo.yml  update_retailmedia_preview_doc.yml
api-specification/: marketingsolutions_2020-10.json  marketingsolutions_preview.json
api-specifications/: commercegrid_2026-01.json  commercegrid_2026-07.json  commercegrid_experimental.json  commercegrid_preview.json  marketingSolutions_2023-07.json  marketingsolutions_2020-10.json  marketingsolutions_2021-07.json  marketingsolutions_2021-10.json  marketingsolutions_2022-01.json  marketingsolutions_2022-04.json  marketingsolutions_2022-07.json  marketingsolutions_2022-10.json  marketingsolutions_2023-01.json  marketingsolutions_2023-04.json  marketingsolutions_2023-07.json  marketingsolutions_2023-10.json  marketingsolutions_2024-01.json  marketingsolutions_2024-04.json  marketingsolutions_2024-07.json  marketingsolutions_2024-10.json  marketingsolutions_2025-01.json  marketingsolutions_2025-04.json  marketingsolutions_2025-07.json  marketingsolutions_2025-10.json  marketingsolutions_2026-01.json  marketingsolutions_2026-07.json  marketingsolutions_experimental.json  marketingsolutions_preview.json  meson.build  petstore_preview.json  retailmedia_2020-10.json  retailmedia_2021-07.json  retailmedia_2021-10.json  retailmedia_2022-01.json  retailmedia_2022-04.json  retailmedia_2022-07.json  retailmedia_2022-10.json  retailmedia_2023-01.json  retailmedia_2023-04.json  retailmedia_2023-07.json  (+14 more)
build-java/: build.gradle
build-php/: build.gradle
build-php/extra-src/: TokenAutoRefreshClient.php
build-python/: build.gradle
buildSrc/: build.gradle.kts  settings.gradle.kts
example-oas/: marketingsolutions_2024-07.json  marketingsolutions_2024-10.json  marketingsolutions_2025-01.json  marketingsolutions_2025-04.json  marketingsolutions_2025-07.json  retailmedia_2025-07.json
generator/: .project
generator/java/: .project  build.gradle  generate_config.sh  generatorConfiguration.yaml  meson.build
generator/java/resources/templates/: ApiClient.mustache  ApiClientBuilder.mustache  E2eTest.mustache  GatewayApiTest.mustache  GatewayApplicationExample.mustache  OAuthApiTest.mustache  PortfolioApplicationExample.mustache  README.mustache  StatisticsApplicationExample.mustache  api_doc.mustache  build.gradle.mustache
generator/java/resources/templates/custom/: ExampleApplication.java.mustache  GatewayApiTest.java.mustache  OAuthRetryTest.java.mustache  uploadToMavenCentral.sh.mustache
generator/java/resources/templates/libraries/okhttp-gson/: pojo.mustache
generator/java/resources/templates/libraries/okhttp-gson/auth/: RetryingOAuth.mustache
generator/php/: .project  build.gradle  generatorConfiguration.yaml  meson.build
generator/php/resources/examples/: Advertiser.php
generator/php/resources/extra-src/: TokenAutoRefreshClient.php
generator/php/resources/templates/: AdvertiserExample.mustache  AnalyticsExample.mustache  ClientCredentialsClient.mustache  ClientCredentialsClientTest.mustache  GatewayApiTest.mustache  GatewayExample.mustache  OAuthApiTest.mustache  README.mustache  TokenAutoRefreshClient.mustache  TokenAutoRefreshClientTest.mustache  composer.mustache  phpunit.xml.dist.mustache  phpunit.xml.mustache
generator/php/resources/templates/custom/: ClientCredentialsClient.php.mustache  ExampleApplication.php.mustache  GatewayApiTest.php.mustache  OAuthClient.php.mustache
generator/php/resources/templates/custom/ClientCredentialsClient/: Token.php.mustache
generator/php/resources/test/Api/: TokenAutoRefreshClientTest.php
generator/python/: .project  build.gradle  generate_config.sh  generatorConfiguration.yaml  meson.build
generator/python/resources/examples/: portfolio.py  statistics.py
generator/python/resources/templates/: README.mustache  __init__package.mustache  api_client_builder.mustache  criteo_api_client.mustache  criteo_auth.mustache  criteo_rest.mustache  example_application.mustache  example_portfolio.mustache  example_statistics.mustache  model.mustache  python_doc_auth_partial.mustache  rest.mustache  setup.mustache  test_gateway_api.mustache  test_oauth_api.mustache
generator/python/resources/templates/custom/: api_client_builder.py.mustache  criteo_api_client.py.mustache  criteo_auth.py.mustache  criteo_rest.py.mustache  example_application.py.mustache  example_application_with_auth_code.py.mustache  example_application_with_client_credentials.py.mustache  example_application_with_refresh_token.py.mustache  flow_constants.py.mustache  test_gateway_api.py.mustache
input/: transition-swagger.json
sandbox/java/: README.md  pom.xml
sandbox/php/: Main.php  README.md  composer.json
sandbox/python/: README.md  main.py
scripts/: build_java_sdk.sh  build_php_sdk.sh  build_python_sdk.sh  build_sdk.sh  fs_client.py  git_client.py  php_action.py  prepare_changelog.py  push_php_sdk.py  push_postman_collection.py  push_sdk.py  push_sdk.sh  push_sdk_java.sh  regenerate_md_files.sh  requirements.txt  send-sdk-build-failure-notification.sh  send-sdk-build-notification.sh  send-sdk-build-success-notification-sdk.sh  test_php_sdk.sh  test_sdk.py  test_sdk.sh  update_specification_files.py  utils.py
scripts/push_sdk/: default_push_action.py  fs_client.py  git_client.py  java_sdk_test_action.py  php_action.py  php_pipeline.py  php_sdk_push_action.py  php_sdk_test_action.py  push_php_sdk_action.py  python_sdk_test_action.py  utils.py
scripts/shared/: utils.py
scripts_legacy/: build_java_sdk.sh  build_python_sdk.sh
(+58 files in other folders)
