api_specifications = files(
  'marketingsolutions_2024-01.json',
  'marketingsolutions_2024-04.json',
  'marketingsolutions_2024-07.json',
  'marketingsolutions_2024-10.json',
  'marketingsolutions_2025-01.json',
  'marketingsolutions_preview.json',
  'retailmedia_2024-01.json',
  'retailmedia_2024-04.json',
  'retailmedia_2024-07.json',
  'retailmedia_2024-10.json',
  'retailmedia_2025-01.json',
  'retailmedia_preview.json',
)
